--- a/grid response.html
+++ b/grid response.html
@@ -9,14 +9,15 @@
     .container { 
         padding: 1%;
         display: grid;
-        grid-template-columns: repeat(auto-fit, 250px);
+        grid-template-columns: repeat(auto-fit, 300px);
         gap: 50px;
         justify-content: center;
     }
     .box { 
         width: 85%;
-        height: 57%;
-        padding: 35px;
+        max-height: 100%;
+        min-height: 15vh;
+        padding: 10px;
         border-radius: 7px;
         border: none;
         background: linear-gradient(to right, #000210, #171212, #151220);
@@ -28,6 +29,13 @@
         color: white;
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         font-size: 15px;
+        font-weight: bolder;
+        color: antiquewhite;
+    }
+    .content {
+        color: white;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-size: 10px;
         font-weight: bolder;
         color: antiquewhite;
     }
@@ -49,38 +57,69 @@
 
     <div class="box">
         <h class="letterbox"> PROJECT MANAGER
+            <p class="content">
+                In an IT company, a Project Manager's job is to plan, execute, and manage IT projects, ensuring they are delivered on time, 
+                within budget, and to the required quality standards, while also managing stakeholders and team members
+            </p>
     </div>
 
     <div class="box">
         <h class="letterbox"> BUSINESS ANALYST
+        <p class="content">
+            bridges the gap between business needs and technical solutions, analyzing processes, identifying areas for improvement, 
+            and recommending IT solutions to enhance efficiency and align with business goals
+        </p>
     </div>
 
     <div class="box">
         <h class="letterbox"> FRONT-END DEVELOPER
+        <p class="content">
+            A front-end developer designs and builds the visual and interactive parts of websites and web applications. 
+            They ensure that the user experience is seamless and
+
+        </p>
     </div>
 
     <div class="box">
         <h class="letterbox"> BACK-END DEVELOPER
+        <p class="content">
+            also known as a server-side developer, focuses on the logic, databases, and server-side software that powers 
+            websites and applications, ensuring smooth functionality and data management behind the
+            
+        </p>
     </div>
 
     <div class="box">
         <h class="letterbox"> UI DESIGNER
+        <p class="content">
+            creates the visual elements and interactions users see and experience when using a website, app, or software, 
+            focusing on making the interface easy and pleasurable to use
+            
+        </p>
     </div>
 
     <div class="box">
         <h class="letterbox"> UX DESIGNER
-    </div>
-
-    <div class="box">
-        <h class="letterbox"> CONTENT WRITER
+        <p class="content">
+            focuses on creating products, websites, or apps that are intuitive, user-friendly, and enjoyable to use, ensuring 
+            a positive user experience
+        </p>
     </div>
 
     <div class="box">
         <h class="letterbox"> QA TESTER
+        <p class="content">
+            someone who tests software or websites to ensure they run smoothly and meet functional requirements, identifying and reporting 
+            bugs and issues to improve the user experience. 
+        </p>
     </div>
 
     <div class="box">
         <h class="letterbox"> DIGITAL MARKETING EXECUTIVE
+        <p class="content">
+            a professional responsible for developing and implementing online marketing strategies to promote a company's brand, products,
+             or services,
+        </p>
     </div>
 </div> 
 
